new login features
